--- a/package.json
+++ b/package.json
@@ -52,34 +52,35 @@
         ]
     },
     "devDependencies": {
-        "@types/chai": "^4.2.18",
+        "@types/chai": "^4.2.21",
         "@types/chai-as-promised": "^7.1.4",
         "@types/chai-subset": "^1.3.3",
-        "@types/mocha": "^8.2.2",
-        "@types/node": "^14.17.0",
-        "@types/react": "^17.0.6",
-        "@types/react-dom": "^17.0.5",
-        "@types/react-helmet": "^6.1.1",
-        "@types/react-redux": "^7.1.16",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/redux-mock-store": "^1.0.2",
-        "@types/uuid": "^8.3.0",
+        "@types/mocha": "^8.2.3",
+        "@types/node": "^14.17.5",
+        "@types/react": "^17.0.14",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-helmet": "^6.1.2",
+        "@types/react-redux": "^7.1.18",
+        "@types/react-router-dom": "^5.1.8",
+        "@types/redux-mock-store": "^1.0.3",
+        "@types/uuid": "^8.3.1",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "chai-subset": "^1.6.0",
         "cross-env": "^7.0.3",
         "cross-fetch": "^3.1.4",
-        "i18next": "^20.2.4",
-        "i18next-browser-languagedetector": "^6.1.1",
+        "i18next": "^20.3.2",
+        "i18next-browser-languagedetector": "^6.1.2",
+        "joi": "^17.4.1",
         "mharj-http-client": "^0.0.7",
-        "mocha": "^8.4.0",
+        "mocha": "^9.0.2",
         "nyc": "^15.1.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
-        "react-i18next": "^11.8.15",
+        "react-i18next": "^11.11.1",
         "react-redux": "^7.2.4",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
@@ -87,15 +88,15 @@
         "redux-mock-store": "^1.5.4",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "sass": "^1.33.0",
+        "sass": "^1.35.2",
         "source-map-support": "^0.5.19",
-        "ts-node": "^9.1.1",
+        "ts-node": "^10.1.0",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^5.0.0",
-        "typescript": "^4.2.4",
+        "typescript": "^4.3.5",
         "uuid": "^8.3.2",
-        "web-vitals": "^1.1.2",
+        "web-vitals": "^2.1.0",
         "workbox-background-sync": "^6.1.5",
         "workbox-broadcast-update": "^6.1.5",
         "workbox-cacheable-response": "^6.1.5",
