--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "watch-css": "sass --watch src:src",
         "start-js": "react-scripts --inspect start",
         "build-js": "react-scripts build",
-        "lint": "tslint \"src/**/*.ts?(x)\"",
+        "lint": "eslint \"src/**/*.ts?(x)\"",
         "start": "npm-run-all -p watch-css start-js",
         "build": "npm-run-all build-css build-js",
         "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json TS_NODE_FILES=true nyc mocha",
@@ -69,6 +69,12 @@
         "chai-subset": "^1.6.0",
         "cross-env": "^7.0.3",
         "cross-fetch": "^3.1.4",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-sonarjs": "^0.10.0",
+        "eslint-plugin-standard": "^5.0.0",
         "i18next": "^21.2.4",
         "i18next-browser-languagedetector": "^6.1.2",
         "mharj-http-client": "^0.0.8",
@@ -90,9 +96,6 @@
         "sass": "^1.42.1",
         "source-map-support": "^0.5.20",
         "ts-node": "^10.2.1",
-        "tslint": "^6.1.3",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-react": "^5.0.0",
         "typescript": "^4.4.3",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.1",
