update to hooks

--- a/package.json
+++ b/package.json
@@ -52,18 +52,16 @@
         ]
     },
     "devDependencies": {
-        "@types/chai": "^4.2.22",
+        "@types/chai": "^4.3.0",
         "@types/chai-as-promised": "^7.1.4",
         "@types/chai-subset": "^1.3.3",
+        "@types/jest": "^26.0.24",
         "@types/mocha": "^9.0.0",
-        "@types/node": "^16.11.2",
-        "@types/react": "^17.0.31",
-        "@types/react-dom": "^17.0.10",
-        "@types/react-helmet": "^6.1.4",
-        "@types/react-redux": "^7.1.20",
-        "@types/react-router-dom": "^5.3.1",
-        "@types/redux-mock-store": "^1.0.3",
-        "@types/uuid": "^8.3.1",
+        "@types/node": "^12.20.41",
+        "@types/react": "^16.14.21",
+        "@types/react-dom": "^16.9.14",
+        "@types/react-helmet": "^6.1.5",
+        "@typescript-eslint/eslint-plugin": "^5.9.0",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "chai-subset": "^1.6.0",
@@ -73,48 +71,43 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-sonarjs": "^0.10.0",
-        "eslint-plugin-standard": "^5.0.0",
-        "i18next": "^21.3.3",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-sonarjs": "^0.11.0",
+        "i18next": "^21.6.5",
         "i18next-browser-languagedetector": "^6.1.2",
         "mharj-http-client": "^0.0.8",
         "mocha": "^9.1.3",
+        "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
-        "prop-types": "^15.7.2",
         "react": "^17.0.2",
-        "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
-        "react-i18next": "^11.12.0",
-        "react-redux": "^7.2.5",
-        "react-router": "^5.2.1",
-        "react-router-dom": "^5.3.0",
-        "redux": "^4.1.1",
-        "redux-mock-store": "^1.5.4",
+        "react-i18next": "^11.15.3",
+        "react-redux": "^7.2.6",
+        "react-router": "^6.2.1",
+        "react-router-dom": "^6.2.1",
+        "react-scripts": "5.0.0",
+        "redux": "^4.1.2",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0",
-        "sass": "^1.43.2",
-        "source-map-support": "^0.5.20",
-        "ts-node": "^10.3.1",
-        "typescript": "^4.4.4",
-        "uuid": "^8.3.2",
-        "web-vitals": "^2.1.2",
-        "workbox-background-sync": "^6.3.0",
-        "workbox-broadcast-update": "^6.3.0",
-        "workbox-cacheable-response": "^6.3.0",
-        "workbox-core": "^6.3.0",
-        "workbox-expiration": "^6.3.0",
-        "workbox-google-analytics": "^6.3.0",
-        "workbox-navigation-preload": "^6.3.0",
-        "workbox-precaching": "^6.3.0",
-        "workbox-range-requests": "^6.3.0",
-        "workbox-routing": "^6.3.0",
-        "workbox-strategies": "^6.3.0",
-        "workbox-streams": "^6.3.0"
-    },
-    "dependencies": {
-        "npm-run-all": "^4.1.5",
-        "react-scripts": "^4.0.3"
+        "redux-thunk": "^2.4.1",
+        "sass": "^1.47.0",
+        "source-map-support": "^0.5.21",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.4",
+        "web-vitals": "^0.2.4",
+        "workbox-background-sync": "^5.1.4",
+        "workbox-broadcast-update": "^5.1.4",
+        "workbox-cacheable-response": "^5.1.4",
+        "workbox-core": "^5.1.4",
+        "workbox-expiration": "^5.1.4",
+        "workbox-google-analytics": "^5.1.4",
+        "workbox-navigation-preload": "^5.1.4",
+        "workbox-precaching": "^5.1.4",
+        "workbox-range-requests": "^5.1.4",
+        "workbox-routing": "^5.1.4",
+        "workbox-strategies": "^5.1.4",
+        "workbox-streams": "^5.1.4"
     },
     "eslintConfig": {
         "extends": "react-app"
