--- a/package.json
+++ b/package.json
@@ -1,126 +1,126 @@
 {
-    "name": "react-typescript-base",
-    "version": "1.0.0",
-    "description": "Basic Typescript React base project (I18N, Helmet, HashRouter, redux, persist, loadable)",
-    "private": true,
-    "homepage": ".",
-    "scripts": {
-        "build-css": "sass src:src",
-        "watch-css": "sass --watch src:src",
-        "start-js": "react-scripts --inspect start",
-        "build-js": "react-scripts build",
-        "lint": "eslint \"src/**/*.ts?(x)\"",
-        "start": "npm-run-all -p watch-css start-js",
-        "build": "npm-run-all build-css build-js",
-        "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json TS_NODE_FILES=true nyc mocha",
-        "eject": "react-scripts eject"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/mharj/react-typescript-base.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/mharj/react-typescript-base/issues"
-    },
-    "nyc": {
-        "extension": [
-            ".ts"
-        ],
-        "include": [
-            "src"
-        ],
-        "reporter": [
-            "text"
-        ],
-        "all": true
-    },
-    "mocha": {
-        "recursive": true,
-        "exit": true,
-        "require": [
-            "ts-node/register",
-            "source-map-support/register"
-        ],
-        "extension": [
-            "ts",
-            "js"
-        ],
-        "reporters": [
-            "spec"
-        ]
-    },
-    "devDependencies": {
-        "@types/chai": "^4.3.0",
-        "@types/chai-as-promised": "^7.1.4",
-        "@types/chai-subset": "^1.3.3",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "^12.20.41",
-        "@types/react": "^17.0.38",
-        "@types/react-dom": "^17.0.11",
-        "@types/react-helmet": "^6.1.5",
-        "@typescript-eslint/eslint-plugin": "^5.10.0",
-        "chai": "^4.3.4",
-        "chai-as-promised": "^7.1.1",
-        "chai-subset": "^1.6.0",
-        "cross-env": "^7.0.3",
-        "cross-fetch": "^3.1.4",
-        "eslint": "^8.7.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
-        "eslint-plugin-sonarjs": "^0.11.0",
-        "i18next": "^21.6.6",
-        "i18next-browser-languagedetector": "^6.1.2",
-        "mharj-http-client": "^0.0.8",
-        "mocha": "^9.1.4",
-        "npm-run-all": "^4.1.5",
-        "nyc": "^15.1.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-helmet": "^6.1.0",
-        "react-i18next": "^11.15.3",
-        "react-redux": "^7.2.6",
-        "react-router": "^6.2.1",
-        "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "redux": "^4.1.2",
-        "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.4.1",
-        "sass": "^1.48.0",
-        "source-map-support": "^0.5.21",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.4",
-        "web-vitals": "^0.2.4",
-        "workbox-background-sync": "^6.4.2",
-        "workbox-broadcast-update": "^6.4.2",
-        "workbox-cacheable-response": "^6.4.2",
-        "workbox-core": "^6.4.2",
-        "workbox-expiration": "^6.4.2",
-        "workbox-google-analytics": "^6.4.2",
-        "workbox-navigation-preload": "^6.4.2",
-        "workbox-precaching": "^6.4.2",
-        "workbox-range-requests": "^6.4.2",
-        "workbox-routing": "^6.4.2",
-        "workbox-strategies": "^6.4.2",
-        "workbox-streams": "^6.4.2"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "react-typescript-base",
+  "version": "1.0.0",
+  "description": "Basic Typescript React base project (I18N, Helmet, HashRouter, redux, persist, Lazyload)",
+  "private": true,
+  "homepage": ".",
+  "scripts": {
+    "build-css": "sass src:src",
+    "watch-css": "sass --watch src:src",
+    "start-js": "react-scripts --inspect start",
+    "build-js": "react-scripts build",
+    "lint": "eslint \"src/**/*.ts?(x)\"",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm-run-all build-css build-js",
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json TS_NODE_FILES=true nyc mocha",
+    "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mharj/react-typescript-base.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mharj/react-typescript-base/issues"
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "include": [
+      "src"
+    ],
+    "reporter": [
+      "text"
+    ],
+    "all": true
+  },
+  "mocha": {
+    "recursive": true,
+    "exit": true,
+    "require": [
+      "ts-node/register",
+      "source-map-support/register"
+    ],
+    "extension": [
+      "ts",
+      "js"
+    ],
+    "reporters": [
+      "spec"
+    ]
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/chai-subset": "^1.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-subset": "^1.6.0",
+    "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.5",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "i18next": "^21.8.3",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "mharj-http-client": "^0.0.8",
+    "mocha": "^10.0.0",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-i18next": "^11.16.9",
+    "react-redux": "^8.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.52.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
