--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-subset": "^1.3.3",
@@ -59,6 +60,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
