--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,20 @@
 {
-    "name": "react-typescript-base",
-    "dockerFile": "Dockerfile",
-    "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash"
-    },
-    "extensions": [
-        "dbaeumer.vscode-eslint",
-        "ms-vscode.vscode-typescript-tslint-plugin",
-        "hbenl.vscode-mocha-test-adapter",
-        "esbenp.prettier-vscode",
-        "mutantdino.resourcemonitor"
-    ],
-    "postCreateCommand": "npm --unsafe-perm install",
-    "forwardPorts": [
-        3000
-    ],
-    "containerUser": "node"
+	"name": "react-typescript-base",
+	"dockerFile": "Dockerfile",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"dbaeumer.vscode-eslint",
+				"ms-vscode.vscode-typescript-tslint-plugin",
+				"hbenl.vscode-mocha-test-adapter",
+				"esbenp.prettier-vscode",
+				"mutantdino.resourcemonitor"
+			],
+			"settings": {
+				"terminal.integrated.shell.linux": "/bin/bash"
+			}
+		}
+	},
+	"forwardPorts": [3000],
+	"containerUser": "node"
 }
