--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint \"src/**/*.ts?(x)\"",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm-run-all build-css build-js",
-    "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json TS_NODE_FILES=true nyc mocha",
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json nyc mocha",
     "eject": "react-scripts eject"
   },
   "repository": {
@@ -52,63 +52,65 @@
     ]
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@types/chai": "^4.3.1",
-    "@types/chai-as-promised": "^7.1.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@mharj/cache-storage": "^0.0.6",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/chai": "^4.3.6",
+    "@types/chai-as-promised": "^7.1.6",
     "@types/chai-subset": "^1.3.3",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "@types/webpack-env": "^1.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "chai": "^4.3.6",
+    "@types/mocha": "^10.0.2",
+    "@types/node": "^18",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@types/webpack-env": "^1.18.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "chai-subset": "^1.6.0",
     "cross-env": "^7.0.3",
-    "cross-fetch": "^3.1.5",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-sonarjs": "^0.13.0",
-    "i18next": "^21.8.3",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "mharj-http-client": "^0.0.8",
-    "mocha": "^10.0.0",
+    "cross-fetch": "^4.0.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.21.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "mharj-http-client": "^0.0.13",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.6.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-i18next": "^11.16.9",
-    "react-redux": "^8.0.1",
+    "react-i18next": "^13.2.2",
+    "react-redux": "^8.1.3",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.52.1",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.69.0",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.3",
-    "workbox-broadcast-update": "^6.5.3",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-google-analytics": "^6.5.3",
-    "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-range-requests": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.5.0",
+    "workbox-background-sync": "^7.0.0",
+    "workbox-broadcast-update": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-google-analytics": "^7.0.0",
+    "workbox-navigation-preload": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-range-requests": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-streams": "^7.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
